--- a/trunk/Crimson Hawk/Docs/TODO
+++ b/trunk/Crimson Hawk/Docs/TODO
@@ -34,3 +34,9 @@ BOSS!!
 Buying weapons & powerups between levels
 AI patterns
 Pool methodologies
+
+
+
+NOTES
+----------------
+xml-like specs of enemies(maybe type and amount), times of appearance and positions
